# datasette-sqlite-trace

./: datasette_sqlite_trace.py  pyproject.toml
tests/: test_sqlite_trace.py
